Jan. 29th 2012
	add log routines

Dec. 27th 2011
	add bloom filter benchmark ut

Oct. 21th 2011
	add benchmark uts

Oct. 2nd 2011
	optimize several cryptographic functions.

Sept. 22th 2011
	modify alignhash.h, returns iterator for insert()

Sept. 20th 2011
	1. add combinatorics algorithm.
	2. add console utility.
	3. add bloom filter.

Sept. 20th 2011
	1. add bitmap, hash functions, aes.
	2. add several utitiles.
	3. add median algorithm.

Sept. 19th 2011
	1. add file binary search module and string utilities.
	2. add kernel list.
	3. add list merge-sort algorithm.

Sept. 18th 2011
	add aligned hashing benchmark program.

Sept. 18th 2011
	1. add makefile and build directories.
	2. add tree component.

Sept. 17-18th 2011
	1. remove attributes mask, order from aligned hashing.
	2. use another double hashing hash functon.
	3. use linear probing by default for better locality.

Sept. 16th 2011
	add aligned hashing, an extremely efficient hashing scheme
	(hashmap & hashset).

Sept. 16th 2011
	project is created.