@@ -1,3 +1,6 @@
+Feb. 9th 2012
+	add stirling's approximation
+
 Jan. 29th 2012
 	add log routines
 
